Fix the visibility of the file input
In order to hide the file input when it is in an
active state I set its opacity to zero.

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ form {
   position: absolute;
   border: 0;
   padding: 0;
+  opacity: 0;
 }
 
 .upload-icon-container {
